--- a/src/index.css
+++ b/src/index.css
@@ -30,17 +30,19 @@ header > p {
 
 .meme {
   position: relative;
-  width: 90%;
+  width: auto;
   margin: auto;
 }
 
 .meme > img {
-  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .meme > h2 {
   position: absolute;
-  width: 80%;
+  width: auto;
   text-align: center;
   left: 50%;
   transform: translateX(-50%);
